--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,8 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="FixCars - Car repairs, services, and roadside assistance in Romania.">
+  <link rel="canonical" href="https://www.fixcars.ro/">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
